# Acgn

./: build.gradle.kts  settings.gradle
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/org/acgn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/acgn/: App.kt  MainActivity.java  MainActivity.kt
app/src/main/java/org/acgn/ui/: HomeFragment.kt
app/src/main/java/org/acgn/widget/recyclerview/: BaseViewHolder.kt  DataSourceProvider.kt  FactoryAdapter.kt  ViewHolderFactory.kt
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/acgn/: ExampleUnitTest.java
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: BasePlugin.kt  Config.kt  Depends.kt  Version.kt
domain/: build.gradle.kts
domain/src/androidTest/java/org/acgn/domain/: ExampleInstrumentedTest.kt
domain/src/main/: AndroidManifest.xml
domain/src/main/java/org/acgn/domain/: Readable.kt
domain/src/test/java/org/acgn/domain/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle  build.gradle.kts  build.gradle.ktx
player/buildscripts/: android.sh  build_chromaprint.sh  build_expat.sh  build_ffmpeg.sh  build_fontconfig.sh  build_freetype.sh  build_fribidi.sh  build_libass.sh  build_libiconv.sh  build_libpng.sh  build_libuuid.sh  build_sdl2.sh  enviroment.sh  ffmpeg_fix_header.sh
player/src/androidTest/java/org/acgn/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: CMakeLists.txt  SDL2  abis.cmake
player/src/main/cpp/player/: CMakeLists.txt  Clock.cpp  Clock.h  Cond.cpp  Cond.h  Decoder.cpp  Decoder.h  FrameQueue.cpp  FrameQueue.h  Mutex.cpp  Mutex.h  PacketQueue.cpp  PacketQueue.h  ReadThread.cpp  ReadThread.h  Thread.cpp  Thread.h  VideoState.cpp  VideoState.h  native-lib.cpp
player/src/main/java/org/acgn/player/: HelloJni.java  HelloJni.kt
player/src/test/java/org/acgn/player/: ExampleUnitTest.java
